tests/snapshots/examples_fixtures/io__aoc_day1_part2_profile.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day1_part2_profile.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `solve`.

  --> examples/io/aoc_day1_part2_profile.flx:43:9
   |
43 |         solve(rest, pos, hits)
   |         ^^^^^

Hint:
  Define it first: let solve = ...;
== stdout ==
<not executed>
